public/s/alpine.po.yaml
apiVersion: v1
kind: Pod
metadata:
  name: alpine
spec:
  containers:
  - name: alpine
    image: wener/base
    command:
    - tail
    args:
    - -f
    - /dev/null
    resources:
      requests:
        cpu: 10m
        memory: 10Mi
      limits:
        cpu: 1000m
        memory: 1Gi
