public/s/whoami.deploy.linkerd.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: whoami
  labels:
    app: whoami
spec:
  replicas: 3
  selector:
    matchLabels:
      app: whoami
  template:
    metadata:
      labels:
        app: whoami
      annotations:
        # enable linkerd inject
        linkerd.io/inject: enabled
    spec:
      containers:
        - name: containouswhoami
          image: containous/whoami
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: 50m
              memory: 25Mi
            limits:
              cpu: 100m
              memory: 50Mi
